      \code{bzfile(open = "a")}) and files created by some other
      compressors (such as the example of \PR{14479}).

      \item The primitive function \code{c()} is now of type BUILTIN.

      \item plot(<dendrogram>, .., nodePar=*) now obeys an optional
      \code{xpd} specification (allowing clipping to be turned off
      completely).

      \item nls(*, algorithm="port") now shares more code with nlminb(),
      and is more consistent with the other algorithms in its return
      value.

      \item xz has been updated to 5.0.1 (very minor bugfix release).

      \item \code{image()} has gained a logical \code{useRaster}
      argument allowing it to use a bitmap raster for plotting a
      regular grid instead of polygons. This can be more efficient, but
      may not be supported by all devices. The default is \code{FALSE}.
    }
  }

  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item Because they use a C99 interface which a C++ compiler is not
      required to support, \code{Rvprintf} and \code{REvprintf} are only
      defined by \file{R_ext/Print.h} in C++ code if the macro
      \code{R_USE_C99_IN_CXX} is defined when it is included.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD Rdiff} is now implemented in \R on
      Unix-alikes (as it has been on Windows since \R 2.12.0).

      \item \command{R CMD build} no longer does any cleaning in the
      supplied package directory: all the cleaning is done in the copy.

      It has a new option \option{--install-args} to pass arguments to
      \command{R CMD INSTALL} for \option{--build} (but not when
      installing to rebuild vignettes).

      There is new option, \option{--resave-data}, to call
      \code{tools::resaveRdaFiles()} on the \file{data} directory, to
      compress tabular files (\file{.tab}, \file{.csv} etc) and to
      convert \file{.R} files to \file{.rda} files.  The default,