@@ -1755,17 +1755,18 @@ To exclude files from being put into the package, one can specify a list
 of exclude patterns in file @file{.Rbuildignore} in the top-level source
 directory.  These patterns should be Perl-like regexps (see the help for
 @code{regexp} in @R{} for the precise details), one per line, to be
-matched against the file names relative to the top-level source
-directory.  In addition, directories from source control
-systems@footnote{called @file{CVS} or @file{.svn} or @file{.arch-ids} or
-@file{.bzr} or @file{.git} or @file{.hg}.}, directories with names
-ending @file{.Rcheck} or @file{Old} or @file{old} and files
-@file{GNUMakefile}, @file{Read-and-delete-me} or with base names
-starting with @samp{.#}, or starting and ending with @samp{#}, or ending
-in @samp{~}, @samp{.bak} or @samp{.swp}, are excluded by default.  In
-addition, those files in the @file{R}, @file{demo} and @file{man}
-directories which are flagged by @code{R CMD check} as having invalid
-names will be excluded.
+matched against the file names@footnote{including directory names as
+from @R{} 2.13.0: earlier versions accepted the names of non-empty
+directories.} relative to the top-level package source directory.  In
+addition, directories from source control systems@footnote{called
+@file{CVS} or @file{.svn} or @file{.arch-ids} or @file{.bzr} or
+@file{.git} or @file{.hg}.}, directories with names ending
+@file{.Rcheck} or @file{Old} or @file{old} and files @file{GNUMakefile},
+@file{Read-and-delete-me} or with base names starting with @samp{.#}, or
+starting and ending with @samp{#}, or ending in @samp{~}, @samp{.bak} or
+@samp{.swp}, are excluded by default.  In addition, those files in the
+@file{R}, @file{demo} and @file{man} directories which are flagged by
+@code{R CMD check} as having invalid names will be excluded.
 
 Use @kbd{R CMD build --help} to obtain more information about the usage
 of the @R{} package builder.
