@@ -1,11 +1,12 @@
 % File src/library/base/man/list.files.Rd
 % Part of the R package, http://www.R-project.org
-% Copyright 1995-2008 R Core Development Team
+% Copyright 1995-2011 R Core Development Team
 % Distributed under GPL 2 or later
 
 \name{list.files}
 \alias{list.files}
 \alias{dir}
+\alias{list.dirs}
 \title{List the Files in a Directory/Folder}
 \usage{
 list.files(path = ".", pattern = NULL, all.files = FALSE,
@@ -15,6 +16,8 @@ list.files(path = ".", pattern = NULL, all.files = FALSE,
        dir(path = ".", pattern = NULL, all.files = FALSE,
            full.names = FALSE, recursive = FALSE,
            ignore.case = FALSE)
+
+list.dirs(path = ".", full.names = TRUE)
 }
 \arguments{
   \item{path}{a character vector of full path names; the default
@@ -26,14 +29,14 @@ list.files(path = ".", pattern = NULL, all.files = FALSE,
     names of visible files are returned.  If \code{TRUE},
     all file names will be returned.}
   \item{full.names}{a logical value.  If \code{TRUE}, the directory
-    path is prepended to the file names.  If \code{FALSE}, only
-    the file names are returned.}
-  \item{recursive}{logical. Should the listing recurse into directories?}
-  \item{ignore.case}{logical. Should pattern-matching be case-insensitive?}
+    path is prepended to the file names to give a relative file path.
+    If \code{FALSE}, the file names (rather than paths) are returned.}
+  \item{recursive}{logical.  Should the listing recurse into directories?}
+  \item{ignore.case}{logical.  Should pattern-matching be case-insensitive?}
 }
 \description{
-  These functions produce a character vector of the names of files
-  in the named directory.
+  These functions produce a character vector of the names of files or
+  directories in the named directory.
 }
 \value{
   A character vector containing the names of the files in the
@@ -42,23 +45,24 @@ list.files(path = ".", pattern = NULL, all.files = FALSE,
   is skipped, with a warning.
 
   The files are sorted in alphabetical order, on the full path
-  if \code{full.names = TRUE}.  Directories are included only if
-  \code{recursive = FALSE}.
+  if \code{full.names = TRUE}.  For \code{list.files}/\code{dir}
+  directories are included only if \code{recursive = FALSE}.
+
+  \code{list.dir} implicitly has \code{all.files = TRUE, recursive =
+    TRUE}, and the answer includes \code{path} itself (provided it is a
+  readable directory). 
 }
 \author{Ross Ihaka, Brian Ripley}
 \note{
   File naming conventions are platform dependent.
-
-  \code{recursive = TRUE} is not supported on all platforms and may be
-  ignored (with a warning).
 }
 \seealso{\code{\link{file.info}}, \code{\link{file.access}}
   and \code{\link{files}} for many more file handling functions and 
   \code{\link{file.choose}} 
 #ifdef windows
-and \code{\link{choose.files}}
+  and \code{\link{choose.files}}
 #endif
-for interactive selection.
+  for interactive selection.
 
   \code{\link{glob2rx}} to convert wildcards (as used by system file
   commands and shells) to regular expressions.
@@ -70,6 +74,8 @@ list.files(R.home())
 ## Only files starting with a-l or r
 ## Note that a-l is locale-dependent, but using case-insensitive
 ## matching makes it unambiguous in English locales
-dir("../..", pattern = "^[a-lr]",full.names=TRUE, ignore.case = TRUE)
+dir("../..", pattern = "^[a-lr]", full.names=TRUE, ignore.case = TRUE)
+
+list.dirs(R.home("doc"))
 }
 \keyword{file}
