@@ -116,8 +116,8 @@ List of 2
 +     "\n\t starting with 'is.' :\t  ",
 +     length(is.bi <- bi[substring(bi,1,3) == "is."]), "\n", sep = "")
 
-Number of base objects:		1255
-Number of functions in base:	1225
+Number of base objects:		1256
+Number of functions in base:	1226
 	 starting with 'is.' :	  50
 
 > ## 0.14  : 31
